# re-dbc

./: angular.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/command/: connect.rs  mod.rs
src-tauri/src/dao/: db.rs
src-tauri/src/error/: mod.rs
src/app/: app.component.css  app.component.html  app.component.ts
src/app/connect-panel/: connect-panel.component.spec.ts  connect-panel.component.ts
src/app/head-menu/: head-menu.component.css  head-menu.component.html  head-menu.component.spec.ts  head-menu.component.ts
src/app/new-connect/: new-connect.component.css  new-connect.component.html  new-connect.component.spec.ts  new-connect.component.ts
